--- a/templates/payments/index.html
+++ b/templates/payments/index.html
@@ -5,9 +5,14 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>دفعات المشروع: {{ project.name }}</h1>
-    <a href="{{ url_for("payment.new_payment", project_id=project.id) }}" class="btn btn-success">
-        <i class="fas fa-plus me-1"></i> إضافة دفعة جديدة
-    </a>
+    <div>
+        <a href="{{ url_for("project.get_project", project_id=project.id) }}" class="btn btn-secondary">
+            <i class="fas fa-arrow-right me-1"></i> العودة للمشروع
+        </a>
+        <a href="{{ url_for("payment.new_payment", project_id=project.id) }}" class="btn btn-success">
+            <i class="fas fa-plus me-1"></i> إضافة دفعة جديدة
+        </a>
+    </div>
 </div>
 
 <div class="card mb-4">
@@ -96,4 +101,3 @@
     });
 </script>
 {% endblock %}
-
