--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -12,9 +12,13 @@
                     <label for="username" class="form-label">اسم المستخدم</label>
                     <input type="text" class="form-control" id="username" name="username" required>
                 </div>
+
                 <div class="mb-3">
                     <label for="password" class="form-label">كلمة المرور</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
+                    <div class="password-container">
+                        <input type="password" class="form-control" id="password" name="password" required>
+                        <i class="fas fa-eye password-toggle-icon" id="togglePassword"></i>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">تسجيل الدخول</button>
             </form>
@@ -25,4 +29,3 @@
     </div>
 </div>
 {% endblock %}
-
