--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -16,9 +16,13 @@
                     <label for="email" class="form-label">البريد الإلكتروني</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
+
                 <div class="mb-3">
                     <label for="password" class="form-label">كلمة المرور</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
+                    <div class="password-container">
+                        <input type="password" class="form-control" id="password" name="password" required>
+                        <i class="fas fa-eye password-toggle-icon" id="togglePassword"></i>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">تسجيل</button>
             </form>
@@ -29,4 +33,3 @@
     </div>
 </div>
 {% endblock %}
-
