--- a/templates/items/index.html
+++ b/templates/items/index.html
@@ -30,9 +30,11 @@
                             <th>رقم البند</th>
                             <th>الوصف</th>
                             <th>الوحدة</th>
+                            {% if current_user.role == 'admin' %}
                             <th>الكمية التعاقدية</th>
                             <th>التكلفة الإفرادية التعاقدية</th>
                             <th>التكلفة الإجمالية التعاقدية</th>
+                            {% endif %}
                             <th>الكمية الفعلية</th>
                             <th>التكلفة الإفرادية الفعلية</th>
                             <th>التكلفة الإجمالية الفعلية</th>
@@ -46,9 +48,11 @@
                             <td>{{ item.item_number }}</td>
                             <td>{{ item.description }}</td>
                             <td>{{ item.unit }}</td>
+                            {% if current_user.role == 'admin' %}
                             <td>{{ item.contract_quantity }}</td>
                             <td>{{ "{:,.2f}".format(item.contract_unit_cost) }}</td>
                             <td>{{ "{:,.2f}".format(item.contract_total_cost) }}</td>
+                            {% endif %}
                             <td>{{ item.actual_quantity if item.actual_quantity is not none else "-" }}</td>
                             <td>{{ "{:,.2f}".format(item.actual_unit_cost) if item.actual_unit_cost is not none else "-" }}</td>
                             <td>{{ "{:,.2f}".format(item.actual_total_cost) }}</td>
