--- a/templates/projects/show.html
+++ b/templates/projects/show.html
@@ -15,11 +15,13 @@
         <a href="{{ url_for("payment.get_payments", project_id=project.id) }}" class="btn btn-success">
             <i class="fas fa-money-bill-wave me-1"></i> الدفعات
         </a>
+        {# START: Modified Button Visibility #}
         {% if current_user.role == 'admin' %}
         <a href="{{ url_for("project.edit_project", project_id=project.id) }}" class="btn btn-warning">
             <i class="fas fa-edit me-1"></i> تعديل
         </a>
         {% endif %}
+        {# END: Modified Button Visibility #}
         </div>
 </div>
 
