--- a/templates/projects/show.html
+++ b/templates/projects/show.html
@@ -15,13 +15,11 @@
         <a href="{{ url_for("payment.get_payments", project_id=project.id) }}" class="btn btn-success">
             <i class="fas fa-money-bill-wave me-1"></i> الدفعات
         </a>
-        {# START: Modified Button Visibility #}
         {% if current_user.role == 'admin' %}
         <a href="{{ url_for("project.edit_project", project_id=project.id) }}" class="btn btn-warning">
             <i class="fas fa-edit me-1"></i> تعديل
         </a>
         {% endif %}
-        {# END: Modified Button Visibility #}
         </div>
 </div>
 
@@ -96,64 +94,9 @@
     </div>
 
     <div class="col-md-4">
-        <div class="card mb-4">
-            <div class="card-header bg-dark text-white">
-                <h3 class="mb-0">الملخص المالي</h3>
-            </div>
-            <div class="card-body">
-                {% if current_user.role == 'admin' %}
-                <div class="mb-3">
-                    <h6>التكلفة التعاقدية</h6>
-                    <h4 class="text-primary">{{ "{:,.2f}".format(project.total_contract_cost) }} ريال</h4>
-                </div>
-                {% endif %}
-                <div class="mb-3">
-                    <h6>التكلفة الفعلية</h6>
-                    <h4 class="text-success">{{ "{:,.2f}".format(project.total_actual_cost) }} ريال</h4>
-                </div>
-                
-                {% if current_user.role == 'admin' %}
-                <div class="mb-3">
-                    <h6>الوفر / الزيادة</h6>
-                    <h4 class="{{ "text-success" if project.total_savings >= 0 else "text-danger" }}">
-                        {{ "{:,.2f}".format(project.total_savings) }} ريال
-                    </h4>
-                </div>
-                {% endif %}
-                <div class="mb-3">
-                    <h6>إجمالي المدفوع</h6>
-                    <h4 class="text-info">{{ "{:,.2f}".format(project.total_paid_amount) }} ريال</h4>
-                </div>
-                <div class="mb-3">
-                    <h6>المبلغ المتبقي</h6>
-                    <h4 class="text-danger">{{ "{:,.2f}".format(project.total_remaining_amount) }} ريال</h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="card mb-4">
-            <div class="card-header bg-info text-white">
-                <h3 class="mb-0">نسب الإنجاز</h3>
-            </div>
-            <div class="card-body">
-                <div class="mb-3">
-                    <h6>نسبة إنجاز البنود</h6>
-                    <div class="progress" style="height: 25px;">
-                        <div class="progress-bar bg-info" role="progressbar" style="width: {{ project.completion_percentage }}%">
-                            {{ "{:.1f}%".format(project.completion_percentage) }}
-                        </div>
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <h6>نسبة الإنجاز المالي</h6>
-                    <div class="progress" style="height: 25px;">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: {{ project.financial_completion_percentage }}%">
-                            {{ "{:.1f}%".format(project.financial_completion_percentage) }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {# START: Replaced with Partial Template #}
+        {% include "partials/_project_summary_cards.html" %}
+        {# END: Replaced with Partial Template #}
 
         <div class="card">
             <div class="card-header bg-secondary text-white">
